# Generated by Django 5.1.4 on 2025-01-01 16:29

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('agent', '0003_alter_division_leader_alter_team_leader_and_more'),
    ]

    operations = [
        migrations.CreateModel(
            name='PersonCompany',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('company', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='company_persons', to='agent.company', verbose_name='Company reference')),
                ('person', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='person_companies', to='agent.person', verbose_name='Person reference')),
            ],
            options={
                'verbose_name': 'Person-Company Relationship',
                'verbose_name_plural': 'Person-Company Relationships',
                'constraints': [models.UniqueConstraint(fields=('person', 'company'), name='unique_person_company')],
            },
        ),
    ]
